make drawer wider, fix #224 fix various layout bugs

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -51,6 +51,10 @@ input {
   color: inherit;
 }
 
+.full-width {
+    width: 100%;
+}
+
 .text-right {
   text-align: right;
 }
